tests/errors/missing_struct_block.drast
// # TEST: struct requires indented block
// # EXPECT: error
// # ERROR_CONTAINS: expected struct block

struct Empty

main, int
	return 0
